Add AJAX functionality

--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,1 +1,11 @@
-<div class="getWord"><%= @word.word %></div>
+<div class="container">
+  <div class="row">
+    <div class="getWord col s5"><%= @word.word %></div>
+     <div class="col s7 circle"><a class="btn-floating btn-large waves-light red"><i class="mdi-content-add"></i></a></div>
+  </div>
+  <div id="wordBody">
+    <div class="getSpeechType"><%= @word.speech_type %></div>
+    <div class="getDefinition"><%= @word.definition %></div>
+    <div class="getSentence"><%= @word.sentence %></div>
+  </div>
+</div>
