--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="getWord col s5"><%= @word.word %></div>
-     <div class="col s7 circle"><a class="btn-floating btn-large waves-light"><i class="mdi-content-add"></i></a></div>
+    <div class="getWord col s7"><%= @word.word %></div>
+    <div class="col s2 plus"><a><i class="medium mdi-content-add"></i></a></div>
+    <%= button_tag "Get new word", class: "waves-light btn-large col s3", id: "newWord" %>
   </div>
   <div id="wordBody">
     <div class="getSpeechType"><%= @word.speech_type %></div>
