--- a/app/assets/stylesheets/modules/word_body.scss
+++ b/app/assets/stylesheets/modules/word_body.scss
@@ -26,5 +26,14 @@
   #wordBody {
     display: none;
     font-size: 1.5em;
+
+    .getSpeechType {
+      font-style: italic;
+      padding-bottom: 1em;
+    }
+
+    .getDefinition {
+      padding-bottom: 1em;
+    }
   }
 }
