--- a/app/assets/stylesheets/modules/nav_bar.scss
+++ b/app/assets/stylesheets/modules/nav_bar.scss
@@ -20,6 +20,7 @@ nav {
   .right {
     .addWord {
       padding-right: 1em;
+      padding-left: 1em;
       a {
         padding-top: 0.2em;
       }
